# bk_avdk_smp_v3.1.9

./: Makefile
ap/components/bk_audio/audio_algorithms/aec_v3_algorithm/: CMakeLists.txt  aec_v3_algorithm.c
ap/components/bk_bluetooth/: CMakeLists.txt  Kconfig
ap/components/bk_bluetooth/api/: bk_a2dp_api.c  bk_at_ble.c  bk_cli_ble.c  bk_pan_api.c  ble_gap_export_api.c  bt_gap_export_api.c  bt_main.c
ap/components/bk_bluetooth/api/bk_at_gatt/: bk_at_dm_performance_test.c  bk_at_dm_performance_test.h  dm_gap_utils.c  dm_gap_utils.h  dm_gatt.c  dm_gatt.h  dm_gatt_connection.c  (+5 more)
ap/components/bk_bluetooth/bk_pan/: CMakeLists.txt  bt_comm_list.c  bt_comm_list.h  bt_manager.c  bt_manager.h  hidd_service.c  hidd_service.h  pan_demo_cli.c  pan_service.c  pan_service.h  pan_user_config.h
ap/components/bk_bluetooth/feat_config/: bt_feature_config.c
ap/components/bk_bluetooth/hci/: hal_hci_core.c  hal_hci_core.h  hci_parse.c  hci_parse.h
ap/components/bk_peripheral/: CMakeLists.txt  Kconfig
ap/components/bk_peripheral/include/: dvp_sensor_devices.h  lcd_panel_devices.h
ap/components/bk_peripheral/src/: bk_peripheral.c
ap/components/bk_thirdparty/VolcEngineRTCLite/: CMakeLists.txt  Kconfig
ap/components/bk_thirdparty/agora-iot-sdk/: CMakeLists.txt  Kconfig
ap/components/bk_thirdparty/zlib/: CMakeLists.txt  Kconfig
ap/middleware/driver/: CMakeLists.txt  Kconfig
ap/middleware/driver/aon_wdt/: aon_wdt_driver.c
ap/middleware/driver/audio/: audio_ring_buff.c
ap/middleware/driver/bk7257_ap/: gpio_driver.c
ap/middleware/driver/bk7258_ap/: gpio_driver.c  gpio_driver.h  interrupt.c  mailbox_base_map.h
ap/middleware/driver/can/: Kconfig  can_demo.c  can_driver.c  can_driver.h  can_statis.c  can_statis.h  can_test.c
ap/middleware/driver/chip_support/: chip_support.c
ap/middleware/driver/ckmn/: ckmn_driver.c  ckmn_driver.h
ap/middleware/driver/common/: driver.c
ap/middleware/driver/dma2d/: dma2d_driver.c
ap/middleware/driver/eth/: eth_mac.c  lan8742.c
ap/middleware/driver/fft/: fft.h  fft_driver.c
ap/middleware/driver/flash/: Kconfig  flash.c  flash_bypass.c  flash_bypass.h  flash_client.c  flash_driver.c  flash_driver.h  flash_driver_ext.c  flash_notify.c  flash_partition.c  flash_server.c  flash_svr_test.c  flash_test.c  flash_wr_test.c
ap/middleware/driver/general_dma/: Kconfig  dma_driver.c  dma_driver.h
ap/middleware/driver/gpio/: Kconfig  cli_gpio_api.c  gpio_driver_base.c  gpio_driver_base.h
ap/middleware/driver/h264/: Kconfig  h264_driver.c  h264_driver.h
ap/middleware/driver/hw_rotate/: rott_driver.c
ap/middleware/driver/hw_scale/: hw_scale_driver.c
ap/middleware/driver/i2c/: Kconfig  cli_i2c_api.c  i2c_driver.c  i2c_driver.h  i2c_unified.c  sim_i2c_driver.c
ap/middleware/driver/i2s/: i2s_driver.c
ap/middleware/driver/icu/: interrupt_base.c
ap/middleware/driver/irda/: irda.c  irda.h
ap/middleware/driver/jpeg_dec/: Kconfig  jpeg_dec_driver.c
ap/middleware/driver/jpeg_enc/: Kconfig  jpeg_driver.c  jpeg_driver.h
ap/middleware/driver/lcd/: Kconfig  lcd_driver.c  lcd_qspi_driver.c  lcd_spi_driver.c  sim_spi_driver.c
ap/middleware/driver/lin/: lin_driver.c
ap/middleware/driver/mailbox/: Kconfig  bk_api_ipc.c  bk_api_ipc.h  bk_api_ipc_test.c  bk_api_rpc.h  bk_api_rpc_client.c  mailbox_channel.c  mailbox_driver_base.h  mb_chnl_buff.c  mb_ipc.c  mb_ipc_cmd.c  mb_ipc_cmd.h  mb_ipc_heartbeat.c  mb_ipc_test.c  mb_uart_driver.c  mbox0_adapter.c  mbox0_cross_core.c  mbox0_drv.c  mbox0_drv.h
ap/middleware/driver/otp/: Kconfig  otp_driver.h  otp_driver_v1_1.c
ap/middleware/driver/pmu/: aon_pmu_driver.c
ap/middleware/driver/psram/: psram_driver.c
ap/middleware/driver/pwm/: Kconfig  cli_pwm_api.c
ap/middleware/driver/pwr_clk/: Kconfig  pm_ap_core.c  pm_ap_demo.c  pm_ap_demo.h  pm_ap_misc.c  pwr_clk.c  rosc_32k.c  rosc_ppm.c
ap/middleware/driver/qspi/: Kconfig  qspi_driver.c  qspi_flash.c
ap/middleware/driver/reset_reason/: reset_reason.c
ap/middleware/driver/rtc/: Kconfig  aon_rtc_driver_64bit.c  aon_rtc_driver_64bit.h
ap/middleware/driver/saradc/: Kconfig  adc_driver.h  saradc_client.c  saradc_client.h  saradc_example.c  saradc_notify.c
ap/middleware/driver/sbc/: sbc_driver.c
ap/middleware/driver/sd_card/: sd_card_driver.c  sdcard_test.c
ap/middleware/driver/sdcard/: sdcard.c  sdcard_test.c  sdio_driver.c  sdio_driver.h
ap/middleware/driver/sdio_host/: sdio_host_driver.c  sdio_host_driver.h
ap/middleware/driver/sdmadc/: sdmadc_driver.c
ap/middleware/driver/spi/: Kconfig  cli_spi_api.c  spi_driver.c  spi_flash.c
ap/middleware/driver/spinlock/: Kconfig  amp_res_lock.c  spinlock.c  spinlock.h
ap/middleware/driver/sys_ctrl/: Kconfig  sys_audio_driver.c  sys_clock_driver.c  sys_ctrl.c  sys_ctrl.h  sys_driver.c  sys_driver.h  sys_ps_driver.c
ap/middleware/driver/timer/: timer_driver.c
ap/middleware/driver/touch/: touch_driver.c  touch_driver_v1_1.c
ap/middleware/driver/tp/: Kconfig  drv_tp.c  tp_driver.c
ap/middleware/driver/trng/: trng_driver.c
ap/middleware/driver/uart/: Kconfig  cli_uart_api.c  uart_driver.c  uart_driver.h
ap/middleware/driver/wdt/: Kconfig  wdt_driver.c
ap/middleware/driver/yuv_buf/: yuv_buf_driver.c  yuv_buf_driver.h
cp/components/bk_bluetooth/: CMakeLists.txt  Kconfig
cp/components/bk_bluetooth/api/: bk_at_ble.c  bk_at_bt.c  ble_gap_export_api.c  bt_main.c
cp/components/bk_bluetooth/bt/: CMakeLists.txt
cp/components/bk_bluetooth/feat_config/: bt_feature_config.c
cp/components/bk_bluetooth/hci/: hal_hci_core.c  hal_hci_core.h  hal_hci_internal.h  hci_distinguish.c  hci_distinguish.h  hci_parse.c  hci_parse.h
cp/components/bk_phy/: CMakeLists.txt  Kconfig
cp/components/bk_phy/include/: bk_phy_adapter.h  bk_phy_ate.h  bk_phy_ipc.h  bk_rf_adapter.h  bk_rf_internal.h
cp/components/bk_phy/src/: bk_phy_adapter.c  bk_phy_api.c  bk_phy_notify.c  bk_phy_server.c  bk_rf_adapter.c  cli_phy.c
projects/dvp_example/ap/: CMakeLists.txt  ap_main.c
projects/video_player_example/ap/: CMakeLists.txt  Kconfig.projbuild  ap_main.c  lv_demo_widgets.c  lv_demo_widgets.h
(+2842 files in other folders)
